fix: prevent scrollbar glitch on footer image animation chore: add 'home' link to footer heading

--- a/src/app/Utilities/footer/footer.component.scss
+++ b/src/app/Utilities/footer/footer.component.scss
@@ -22,6 +22,7 @@
      text-align: center;
      color: #d5d5d5;
      font-size: 13px;
+     cursor: pointer;
  }
  
  .swasthify:hover {
